:pushpin: Updating dependencies to fix vulnerabilities

--- a/package.json
+++ b/package.json
@@ -13,34 +13,37 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.42",
-    "@babel/core": "^7.0.0-beta.42",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.42",
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^22.4.4",
-    "eslint": "^4.19.0",
-    "eslint-config-prettier": "^2.9.0",
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.4",
+    "babel-jest": "^24.8.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.10.0",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.46.1",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "nodemon": "^1.17.5",
-    "prettier": "^1.11.1"
+    "eslint-plugin-prettier": "^2.7.0",
+    "eslint-plugin-react": "^7.14.2",
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2"
   },
   "peerDependencies": {
     "babel-polyfill": "^6.26.0"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "jest": "^22.4.4",
-    "jsonwebtoken": "^8.2.0",
-    "lodash": "^4.17.10",
-    "memoizee": "^0.4.12",
-    "path-to-regexp": "^2.2.1",
-    "url-join": "^4.0.0"
+    "axios": "^0.19.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.14",
+    "memoizee": "^0.4.14",
+    "path-to-regexp": "^2.4.0",
+    "url-join": "^4.0.1"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "trailingComma": "all",
+    "singleQuote": true
   }
 }
